--- a/flask-app/templates/register.html
+++ b/flask-app/templates/register.html
@@ -1,5 +1,7 @@
-{%extends "layout/authentication.html" %}    
-{%block content%}
+{%extends "layout/authentication.html" %}  
+
+
+{% block content %}
 <body class="bg-gradient-primary">
     <div class="container">
         <div class="card shadow-lg o-hidden border-0 my-5">
@@ -13,7 +15,16 @@
                             <div class="text-center">
                                 <h4 class="text-dark mb-4">Create an Account!</h4>
                             </div>
-                            <form class="user">
+                            {% with messages = get_flashed_messages() %}
+                                {% if messages %}
+                                    {% for  message in messages %}
+                                        <div class="alert alert-{{ message[0] }}" role="alert">
+                                            {{ message[1] }}
+                                        </div>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endwith %}
+                            <form class="user" method="POST">
                                 <div class="row mb-3">
                                     <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" id="exampleFirstName" placeholder="First Name" name="first_name"></div>
                                     <div class="col-sm-6"><input class="form-control form-control-user" type="text" id="exampleLastName" placeholder="Last Name" name="last_name"></div>
@@ -40,7 +51,5 @@
 </body>
 
 </html>
-{% endblock %}
-{% block script %}
-<script src="../static/js/authentication/login.js"></script>
+
 {% endblock %}
